# blockchain-prototype

./: Cargo.toml  README.md
src/: block.rs  blockchain.rs  config.rs  error.rs  hash.rs  main.rs  pow.rs  transaction.rs
src/consensus/: mod.rs  pow.rs
