[package]
name = "blockchain-prototype"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
hex = "0.4"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
